# My_AI_Agent

./: .env  .env.example  README.md  pyproject.toml
ai_agents_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: config.py  exceptions.py  logger.py  main.py  utils.py
src/agent/: __init__.py  base.py  orchestration.py  prompts.py
src/observability/: cost_tracker.py  loop_detector.py  tracer.py
src/tools/: __init__.py  registry.py  search_tool.py  tavily_search.py
tests/: inspect_app.py  verify_components.py
